force-app/main/default/objects/Case/fields/Additional_Case_Notification__c.field-meta.xml
<CustomField>
    <fullName>Additional_Case_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If an additional person is required to receive case notifications, fill in the appropriate User.</description>
    <inlineHelpText>Additional EMPAUA user to receive case notifications (ie: holiday cover, BA support)</inlineHelpText>
    <label>Additional Case Notification</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>