force-app/main/default/objects/Case/fields/Additional_Case_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Case_Notification_Email__c</fullName>
    <description>Populates with email from Additional Case Notification field on related TR Project</description>
    <inlineHelpText>Populates with email from Additional Case Notification field on related TR Project</inlineHelpText>
    <label>Additional Case Notification Email</label>
    <type>Email</type>
</CustomField>