force-app/main/default/objects/Case/fields/Anticipated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Hours__c</fullName>
    <formula>EstimatedTime__c -  Time_Entry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anticipated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>