force-app/main/default/objects/Case/fields/BusinessBackground__c.field-meta.xml
<CustomField>
    <fullName>BusinessBackground__c</fullName>
    <label>Business Background</label>
    <type>TextArea</type>
</CustomField>