force-app/main/default/objects/Case/fields/Case_Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_Detail__c</fullName>
    <inlineHelpText>Provide any additional detail about the case status here (ie: on hold due to maternity leave, awaiting reply from client but they are on leave until XX/YY)</inlineHelpText>
    <label>Case Status Detail</label>
    <type>TextArea</type>
</CustomField>