force-app/main/default/objects/Case/fields/CaseAccountCurrentUserContactAuto__c.field-meta.xml
<CustomField>
    <fullName>CaseAccountCurrentUserContactAuto__c</fullName>
    <formula>IF(ISBLANK($User.ContactId),FALSE,IF( ContactId =  $User.ContactId,TRUE,FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Contact = Current User Contact</label>
    <type>Checkbox</type>
</CustomField>