force-app/main/default/objects/Case/fields/CaseAge__c.field-meta.xml
<CustomField>
    <fullName>CaseAge__c</fullName>
    <formula>IF(
 IsClosed,  ClosedDate -  CreatedDate , NOW()- CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>