force-app/main/default/objects/Case/fields/CaseCreatorCurrentUserAuto__c.field-meta.xml
<CustomField>
    <fullName>CaseCreatorCurrentUserAuto__c</fullName>
    <formula>IF($User.Id = CreatedById,TRUE,FALSE)</formula>
    <label>Case Creator = Current User</label>
    <type>Checkbox</type>
</CustomField>