force-app/main/default/objects/Case/fields/CaseOwnerCurrentUserAuto__c.field-meta.xml
<CustomField>
    <fullName>CaseOwnerCurrentUserAuto__c</fullName>
    <formula>IF($User.Id = OwnerId,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner = Current User</label>
    <type>Checkbox</type>
</CustomField>