force-app/main/default/objects/Case/fields/ClientNotesAuto__c.field-meta.xml
<CustomField>
    <fullName>ClientNotesAuto__c</fullName>
    <description>Pulls from related account record, field is Operations Summary</description>
    <formula>Account.OperationsSummary__c</formula>
    <inlineHelpText>Pulls from related account record, field is Operations Summary</inlineHelpText>
    <label>Client Notes</label>
    <type>Text</type>
</CustomField>