force-app/main/default/objects/Case/fields/CustomerLoginRef__c.field-meta.xml
<CustomField>
    <fullName>CustomerLoginRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment</label>
    <referenceTo>CustomerLogin__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>