force-app/main/default/objects/Case/fields/EMPAUA_First_Response__c.field-meta.xml
<CustomField>
    <fullName>EMPAUA_First_Response__c</fullName>
    <description>To better understand internal SLAs on cases.</description>
    <inlineHelpText>First EMPAUA response to client, autopopulated.</inlineHelpText>
    <label>EMPAUA First Response</label>
    <type>DateTime</type>
</CustomField>