force-app/main/default/objects/Case/fields/EstimatedTime__c.field-meta.xml
<CustomField>
    <fullName>EstimatedTime__c</fullName>
    <inlineHelpText>Estimation Required: If you select Yes, we will provide you with our Estimated Time which will need to be approved prior to work commencing on the Case</inlineHelpText>
    <label>Estimated Time (Hours)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>