force-app/main/default/objects/Case/fields/EstimateIsRequired__c.field-meta.xml
<CustomField>
    <fullName>EstimateIsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the request should be estimate?</description>
    <inlineHelpText>If this checked, the customer want to have an estimate of hours for this case.</inlineHelpText>
    <label>Estimate Required</label>
    <type>Checkbox</type>
</CustomField>