force-app/main/default/objects/Case/fields/Estimation_Required__c.field-meta.xml
<CustomField>
    <fullName>Estimation_Required__c</fullName>
    <label>Estimation Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>