force-app/main/default/objects/Case/fields/Estimation_Status__c.field-meta.xml
<CustomField>
    <fullName>Estimation_Status__c</fullName>
    <label>Estimation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>