force-app/main/default/objects/Case/fields/GoLiveDate__c.field-meta.xml
<CustomField>
    <fullName>GoLiveDate__c</fullName>
    <description>Changed from Estimated Resolution Date to Go Live Date (10/03/2021)</description>
    <label>Go Live Date</label>
    <type>Date</type>
</CustomField>