force-app/main/default/objects/Case/fields/IsOverrunPermitted__c.field-meta.xml
<CustomField>
    <fullName>IsOverrunPermitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a case is logged when there are fewer than 4 hours remaining on the Monthly allowance, request permission to proceed over hours.</description>
    <inlineHelpText>If the Monthly Allowance is low, May we run over the Monthly Allowance to work on this case?</inlineHelpText>
    <label>Is Overrun Permitted</label>
    <type>Checkbox</type>
</CustomField>