force-app/main/default/objects/Case/fields/Last_EMPAUA_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Last_EMPAUA_Interaction__c</fullName>
    <label>Last EMPAUA Interaction</label>
    <type>Date</type>
</CustomField>