force-app/main/default/objects/Case/fields/Monthly_Allowance_date__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Allowance_date__c</fullName>
    <formula>(OpportunityRef__r.PlannedHours__c /  EstimatedTime__c ) *100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Allowance date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>