force-app/main/default/objects/Case/fields/Monthly_Allowance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Allowance_Remaining__c</fullName>
    <description>Monthly Allowance, less Billable time this month</description>
    <formula>TaskRay_Project__r.Monthly_Allowance__c -  TaskRay_Project__r.Billable_Hrs_This_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Allowance Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>