force-app/main/default/objects/Case/fields/MonthlyAllowanceRemainingAuto__c.field-meta.xml
<CustomField>
    <fullName>MonthlyAllowanceRemainingAuto__c</fullName>
    <description>Displays the value from related Taskray Project related to this case</description>
    <formula>TaskRay_Project__r.Monthly_Allowance_RemainingAuto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hours remaining "this month" in the related project's monthly allowance</inlineHelpText>
    <label>Monthly Allowance Remaining Auto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>