force-app/main/default/objects/Case/fields/Operations_Summary__c.field-meta.xml
<CustomField>
    <fullName>Operations_Summary__c</fullName>
    <label>Operations Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>