force-app/main/default/objects/Case/fields/OpportunityRef__c.field-meta.xml
<CustomField>
    <fullName>OpportunityRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>