force-app/main/default/objects/Case/fields/Priority_Reason__c.field-meta.xml
<CustomField>
    <fullName>Priority_Reason__c</fullName>
    <label>Priority Reason</label>
    <type>TextArea</type>
</CustomField>