force-app/main/default/objects/Case/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <formula>TaskRay_Project__r.Owner:User.FirstName +" "+ TaskRay_Project__r.Owner:User.LastName</formula>
    <label>Project Manager</label>
    <type>Text</type>
</CustomField>