force-app/main/default/objects/Case/fields/ProjectBacklogHoursAuto__c.field-meta.xml
<CustomField>
    <fullName>ProjectBacklogHoursAuto__c</fullName>
    <description>Displays the backlog hours from the related TaskrayProject</description>
    <formula>TaskRay_Project__r.BacklogHoursAuto__c</formula>
    <inlineHelpText>Displays the backlog hours from the related TaskrayProject</inlineHelpText>
    <label>Project Backlog Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>