force-app/main/default/objects/Case/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <description>For Spanish customers. Is the internal Id for the customer.</description>
    <label>Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>