force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <inlineHelpText>Quick / Minor Changes include changes like adding picklist values, changing layouts, etc.</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Details / User Access</fullName>
            </value>
            <value>
                <fullName>Errors / Bugs</fullName>
            </value>
            <value>
                <fullName>Data Update</fullName>
            </value>
            <value>
                <fullName>Quick / Minor Change</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>New feature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>