force-app/main/default/objects/Case/fields/RolesTypesNeededPick__c.field-meta.xml
<CustomField>
    <fullName>RolesTypesNeededPick__c</fullName>
    <description>Select all the role types needed to process this case. Internal only</description>
    <inlineHelpText>Select all the role types needed to process this case</inlineHelpText>
    <label>Roles Types Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>Dev</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>