force-app/main/default/objects/Case/fields/SendChatterNotification__c.field-meta.xml
<CustomField>
    <fullName>SendChatterNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the field if you want the feed comments on the case to be sent to related contact.</description>
    <label>Send Chatter Notification</label>
    <type>Checkbox</type>
</CustomField>