force-app/main/default/objects/Case/fields/TaskRay_Project__c.field-meta.xml
<CustomField>
    <fullName>TaskRay_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TaskRay Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TASKRAY__Project__c.StatusEmpaua__c</field>
            <operation>notEqual</operation>
            <value>Finished</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>TASKRAY__Project__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>