force-app/main/default/objects/Case/fields/Time_Entry__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry__c</fullName>
    <label>Time Spent (Hours)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>