force-app/main/default/objects/Case/fields/TotalTimeEntries__c.field-meta.xml
<CustomField>
    <fullName>TotalTimeEntries__c</fullName>
    <label>TotalTimeEntries</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>