force-app/main/default/objects/Case/fields/TR_Task__c.field-meta.xml
<CustomField>
    <fullName>TR_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For MS automation, if TR task already created to associate with case, do not create again.</description>
    <inlineHelpText>For MS automation, if TR task already created to associate with case, do not create again.</inlineHelpText>
    <label>TR Task</label>
    <type>Checkbox</type>
</CustomField>