force-app/main/default/objects/Case/recordTypes/CustomerCase.recordType-meta.xml
<RecordType>
    <fullName>CustomerCase</fullName>
    <active>true</active>
    <businessProcess>Maintenance %28Customer%29</businessProcess>
    <label>Customer Case</label>
</RecordType>