force-app/main/default/objects/Case/recordTypes/Internal_Support.recordType-meta.xml
<RecordType>
    <fullName>Internal_Support</fullName>
    <active>false</active>
    <businessProcess>Product Owner %28Internal%29</businessProcess>
    <description>For requests related to User Access, Errors, Data Updates and Quick Changes</description>
    <label>Internal Support</label>
</RecordType>