force-app/main/default/objects/Case/validationRules/Enforce_Priority_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Priority_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name = 'Internal Support'
&amp;&amp;
ISPICKVAL ( Priority , 'High')
&amp;&amp;
ISBLANK ( Priority_Reason__c )</errorConditionFormula>
    <errorDisplayField>Priority_Reason__c</errorDisplayField>
    <errorMessage>Please explain why this case has a high priority</errorMessage>
</ValidationRule>