force-app/main/default/objects/Case/listViews/All_Open_Cases_PORTAL.listView-meta.xml
<ListView>
    <fullName>All_Open_Cases_PORTAL</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Estimation_Required__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CaseAge__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Open Support Cases</label>
</ListView>