force-app/main/default/objects/Case/listViews/All_Organisation_Cases.listView-meta.xml
<ListView>
    <fullName>All_Organisation_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Estimation_Required__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CaseAge__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Cases</label>
</ListView>