force-app/main/default/objects/Case/listViews/Awaiting_Response_Testing_Cases.listView-meta.xml
<ListView>
    <fullName>Awaiting_Response_Testing_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Awaiting Reply,Testing</value>
    </filters>
    <label>Awaiting Response/Testing Cases</label>
</ListView>