force-app/main/default/objects/Case/listViews/Client_case_review.listView-meta.xml
<ListView>
    <fullName>Client_case_review</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Case_Status_Detail__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>EstimatedTime__c</columns>
    <columns>Estimation_Required__c</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>shep</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.CustomerCase</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Client case review - template</label>
    <sharedTo>
        <group>Managed_Services_UK</group>
        <role>KirinSquad</role>
    </sharedTo>
</ListView>