force-app/main/default/objects/Case/listViews/Copy_of_My_Open_Cases.listView-meta.xml
<ListView>
    <fullName>Copy_of_My_Open_Cases</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4) AND 5</booleanFilter>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>Severity_Level__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Case_Status_Detail__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.CustomerCase</value>
    </filters>
    <filters>
        <field>Project_Manager__c</field>
        <operation>equals</operation>
        <value>Jessica Leung</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>JLE</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>On Hold</value>
    </filters>
    <label>Copy of My Open Cases</label>
    <sharedTo>
        <group>Managed_Services_UK</group>
    </sharedTo>
</ListView>