force-app/main/default/objects/Case/listViews/E2C_Support_Case.listView-meta.xml
<ListView>
    <fullName>E2C_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>E2C Support</label>
    <queue>E2C_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>