force-app/main/default/objects/Case/listViews/In_Progress_Cases.listView-meta.xml
<ListView>
    <fullName>In_Progress_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>In Progress Cases</label>
</ListView>