force-app/main/default/objects/Case/listViews/MyClosedSupportCases.listView-meta.xml
<ListView>
    <fullName>MyClosedSupportCases</fullName>
    <booleanFilter>(1 OR 2 OR 3)  AND 4</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CaseAge__c</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CaseCreatorCurrentUserAuto__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CaseOwnerCurrentUserAuto__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CaseAccountCurrentUserContactAuto__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Closed Support Cases</label>
</ListView>