force-app/main/default/objects/Case/listViews/MyOpenSupportCases.listView-meta.xml
<ListView>
    <fullName>MyOpenSupportCases</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Estimation_Required__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CaseAge__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CaseOwnerCurrentUserAuto__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CaseAccountCurrentUserContactAuto__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Open  Support Cases</label>
</ListView>