force-app/main/default/objects/Case/listViews/MySupportCases.listView-meta.xml
<ListView>
    <fullName>MySupportCases</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Estimation_Required__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CaseAge__c</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CaseCreatorCurrentUserAuto__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CaseOwnerCurrentUserAuto__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CaseAccountCurrentUserContactAuto__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Support Cases</label>
</ListView>