force-app/main/default/objects/Case/listViews/Office_Freedom_Support_Case.listView-meta.xml
<ListView>
    <fullName>Office_Freedom_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Office Freedom Support</label>
    <queue>Office_Freedom_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>